--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Vladislav Svitkovskiy <svitkovskiy198@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "json-server": "^0.16.2"
+    "json-server": "^0.16.2",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   }
 }
