--- a/package.json
+++ b/package.json
@@ -8,9 +8,22 @@
   },
   "author": "Vladislav Svitkovskiy <svitkovskiy198@gmail.com>",
   "license": "ISC",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
     "json-server": "^0.16.2",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
